[gd_scene load_steps=2 format=3 uid="uid://b7gwwhnck8cog"]

[ext_resource type="Script" path="res://scenes/restock_menu/item.gd" id="1_8vy5j"]

[node name="Item" type="VBoxContainer"]
offset_right = 300.0
offset_bottom = 85.0
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 5
script = ExtResource("1_8vy5j")

[node name="ItemLabel" type="Label" parent="."]
layout_mode = 2
text = "Fishball"

[node name="PriceLabel" type="Label" parent="."]
layout_mode = 2
text = "75
"

[node name="StocksLabel" type="Label" parent="."]
layout_mode = 2
text = "Current Stocks: 100"

[node name="BuyButton" type="Button" parent="."]
layout_mode = 2
text = "BUY"

[connection signal="button_down" from="BuyButton" to="." method="_on_buy_button_button_down"]
